# tm-tg-bot-v1

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  init.db  init.sql  pyproject.toml
alembic/: env.py
alembic/versions/: dec3f1bee649_initial.py
app/: __init__.py  main.py  settings.py
bot/: generators.py  keyboards.py  main.py  schemas.py
bot/handlers/: __init__.py  commands.py  messages.py
db/: main.py  models.py
proto/: density_calculator_service.proto  distance_calculator_service.proto  distance_calculator_service_pb2.py  distance_calculator_service_pb2_grpc.py  map_sessions_service.proto
utils/: __init__.py  density_calculator_wrapper.py  distance_calculator_wrapper.py  map_sessions_wrapper.py  redis_wrapper.py
